--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- 页面加载后立即执行跳转 -->
   <script>
     // 替换为你要跳转的目标网址（例如：https://example.com）
-    const targetUrl = "https://baidu.com";
+    const targetUrl = "https://lunaabc-4g9hirv668e6f1c6-1301684493.tcloudbaseapp.com/app-ifvdat6q/production/iframe?url=https://baidu.com";
 
     // 自动跳转逻辑
     window.onload = function () {
@@ -22,5 +22,6 @@
     };
   </script>
 </body>
+
 
 </html>
